--- a/grafana-family/infra/fluent-bit/conf/fluent-bit.conf
+++ b/grafana-family/infra/fluent-bit/conf/fluent-bit.conf
@@ -14,12 +14,12 @@
     Parser nginx
     Reserve_Data true
 
-# [FILTER]
-#     Name parser
-#     Match app*
-#     Key_Name log
-#     Parser app
-#     Reserve_Data true
+[FILTER]
+    Name parser
+    Match app*
+    Key_Name log
+    Parser app
+    Reserve_Data true
 
 [OUTPUT]
     Name grafana-loki
