--- a/grafana-family/infra/docker-compose.yml
+++ b/grafana-family/infra/docker-compose.yml
@@ -2,87 +2,102 @@ version: "3"
 
 volumes:
   prometheus_data: {}
+  loki_data: {}
   grafana_data: {}
 
 services:
-  # nginx:
-  #   image: kscarlett/nginx-log-generator
-  #   container_name: nginx
-  #   logging:
-  #     driver: fluentd
-  #     options:
-  #       fluentd-address: localhost:24224
-  #       fluentd-async: "true"
-  #       tag: nginx
-  fluent-bit:
-    image: grafana/fluent-bit-plugin-loki:2.8.1-amd64
-    container_name: fluent-bit
+  nginx:
+    image: kscarlett/nginx-log-generator
+    container_name: nginx
+    # logging:
+    #   driver: fluentd
+    #   options:
+    #     fluentd-address: localhost:24224
+    #     fluentd-async: "true"
+    #     tag: nginx
+  alloy:
+    image: grafana/alloy:latest
+    container_name: alloy
     ports:
-      - "24224:24224"
-      - "24224:24224/udp"
+      - "12345:12345"
     volumes:
-      - ./fluent-bit/conf/:/fluent-bit/etc/
-    env_file:
-      - ./fluent-bit/.env
+      - ./alloy/config.alloy:/etc/alloy/config.alloy
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/config.alloy
+    depends_on:
+      - loki
+  # fluent-bit:
+  #   image: grafana/fluent-bit-plugin-loki:3.0.0
+  #   container_name: fluent-bit
+  #   ports:
+  #     - "24224:24224"
+  #     - "24224:24224/udp"
+  #   volumes:
+  #     - ./fluent-bit/conf/:/fluent-bit/etc/
+  #   env_file:
+  #     - ./fluent-bit/.env
   loki:
-    image: grafana/loki:2.8.1
+    image: grafana/loki:latest
     container_name: loki
     ports:
       - "3100:3100"
-    command: --config.file=/etc/loki/local-config.yaml
+    volumes:
+      - ./loki/config.yaml:/etc/loki/local-config.yaml
+      - loki_data:/loki
+    command: -config.file=/etc/loki/local-config.yaml
     env_file:
       - ./loki/.env
-  tempo:
-    image: grafana/tempo:2.1.1
-    container_name: tempo
-    depends_on:
-      - loki
-    ports:
-      - "14268:14268" # jaeger ingest
-      - "3200:3200" # tempo
-      - "4317:4317" # otlp grpc
-      - "4318:4318" # otlp http
-      - "9411:9411" # zipkin
-    command: --config.file=/etc/tempo.yaml
-    volumes:
-      - ./tempo/tempo-local.yaml:/etc/tempo.yaml
-      - ./tempo/.env:/tmp/tempo/.env
-    logging:
-      driver: loki
-      options:
-        loki-url: "http://localhost:3100/loki/api/v1/push"
-  prometheus:
-    image: prom/prometheus:main
-    container_name: prometheus
-    ports:
-      - "9090:9090"
-    volumes:
-      - ./prometheus/:/etc/prometheus/
-      - prometheus_data:/prometheus
-    command:
-      - "--config.file=/etc/prometheus/config.yaml"
-      - "--storage.tsdb.path=/prometheus"
-      - "--storage.tsdb.retention.time=1d"
-      - "--web.console.libraries=/usr/share/prometheus/console_libraries"
-      - "--web.console.templates=/usr/share/prometheus/consoles"
-  alertmanager:
-    image: prom/alertmanager:main
-    container_name: alertmanager
-    ports:
-      - 9093:9093
-    volumes:
-      - ./alertmanager/:/etc/alertmanager/
-    command:
-      - "--config.file=/etc/alertmanager/config.yaml"
-      - "--storage.path=/alertmanager"
-    restart: always
+  # tempo:
+  #   image: grafana/tempo:2.1.1
+  #   container_name: tempo
+  #   depends_on:
+  #     - loki
+  #   ports:
+  #     - "14268:14268" # jaeger ingest
+  #     - "3200:3200" # tempo
+  #     - "4317:4317" # otlp grpc
+  #     - "4318:4318" # otlp http
+  #     - "9411:9411" # zipkin
+  #   command: -config.file=/etc/tempo.yaml
+  #   volumes:
+  #     - ./tempo/tempo-local.yaml:/etc/tempo.yaml
+  #     - ./tempo/.env:/tmp/tempo/.env
+  #   logging:
+  #     driver: loki
+  #     options:
+  #       loki-url: "http://localhost:3100/loki/api/v1/push"
+  # prometheus:
+  #   image: prom/prometheus:main
+  #   container_name: prometheus
+  #   ports:
+  #     - "9090:9090"
+  #   volumes:
+  #     - ./prometheus/:/etc/prometheus/
+  #     - prometheus_data:/prometheus
+  #   command:
+  #     - "--config.file=/etc/prometheus/config.yaml"
+  #     - "--storage.tsdb.path=/prometheus"
+  #     - "--storage.tsdb.retention.time=1d"
+  #     - "--web.console.libraries=/usr/share/prometheus/console_libraries"
+  #     - "--web.console.templates=/usr/share/prometheus/consoles"
+  # alertmanager:
+  #   image: prom/alertmanager:main
+  #   container_name: alertmanager
+  #   ports:
+  #     - 9093:9093
+  #   volumes:
+  #     - ./alertmanager/:/etc/alertmanager/
+  #   command:
+  #     - "--config.file=/etc/alertmanager/config.yaml"
+  #     - "--storage.path=/alertmanager"
+  #   restart: always
   grafana:
     image: grafana/grafana:main
     container_name: grafana
     user: "472"
     depends_on:
       - loki
-      - prometheus
+      # - prometheus
     ports:
       - "3000:3000"
     volumes:
