--- a/grafana-family/infra/docker-compose.yml
+++ b/grafana-family/infra/docker-compose.yml
@@ -6,15 +6,33 @@ volumes:
   grafana_data: {}
 
 services:
+  app:
+    image: app
+    container_name: app
+    ports:
+      - "4000:4000"
+    environment:
+      - PORT=4000
+      - SERVICE_NAME=service_01
+      - JAEGER_ENDPOINT=http://192.168.213.97:14268/api/traces
+  app2:
+    image: app
+    container_name: app2
+    ports:
+      - "5000:5000"
+    environment:
+      - PORT=5000
+      - SERVICE_NAME=service_02
+      - JAEGER_ENDPOINT=http://192.168.213.97:14268/api/traces
   nginx:
     image: kscarlett/nginx-log-generator
     container_name: nginx
-    # logging:
-    #   driver: fluentd
-    #   options:
-    #     fluentd-address: localhost:24224
-    #     fluentd-async: "true"
-    #     tag: nginx
+  # logging:
+  #   driver: fluentd
+  #   options:
+  #     fluentd-address: localhost:24224
+  #     fluentd-async: "true"
+  #     tag: nginx
   alloy:
     image: grafana/alloy:latest
     container_name: alloy
@@ -45,27 +63,19 @@ services:
       - ./loki/config.yaml:/etc/loki/local-config.yaml
       - loki_data:/loki
     command: -config.file=/etc/loki/local-config.yaml
-    env_file:
-      - ./loki/.env
-  # tempo:
-  #   image: grafana/tempo:2.1.1
-  #   container_name: tempo
-  #   depends_on:
-  #     - loki
-  #   ports:
-  #     - "14268:14268" # jaeger ingest
-  #     - "3200:3200" # tempo
-  #     - "4317:4317" # otlp grpc
-  #     - "4318:4318" # otlp http
-  #     - "9411:9411" # zipkin
-  #   command: -config.file=/etc/tempo.yaml
-  #   volumes:
-  #     - ./tempo/tempo-local.yaml:/etc/tempo.yaml
-  #     - ./tempo/.env:/tmp/tempo/.env
-  #   logging:
-  #     driver: loki
-  #     options:
-  #       loki-url: "http://localhost:3100/loki/api/v1/push"
+  tempo:
+    image: grafana/tempo:2.1.1
+    container_name: tempo
+    ports:
+      - "14268:14268" # jaeger ingest
+      - "3200:3200" # tempo
+      - "4317:4317" # otlp grpc
+      - "4318:4318" # otlp http
+      - "9411:9411" # zipkin
+    command: -config.file=/etc/tempo.yaml
+    volumes:
+      - ./tempo/tempo-local.yaml:/etc/tempo.yaml
+      - ./tempo/.env:/tmp/tempo/.env
   # prometheus:
   #   image: prom/prometheus:main
   #   container_name: prometheus
@@ -97,6 +107,7 @@ services:
     user: "472"
     depends_on:
       - loki
+      - tempo
       # - prometheus
     ports:
       - "3000:3000"
